# nextcpp

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: codeql.yml
app/: CMakeLists.txt  main.cpp
cmake/: LTO.cmake  Sanitizer.cmake  Tools.cmake  modules_dependency_scan_enabler.cmake
src/: CMakeLists.txt  utils.ixx
src/partitions/: utils-helloworld.ixx  utils-print.ixx
tests/: CMakeLists.txt
tests/utils/: CMakeLists.txt
